--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html lang="nl"
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Tetris!</title>
+<link rel="icon" href="public/assets/img/favicon.png" type="image/png">
+    <meta name="description" content="Games maken en ervaren (D, Keuze J, P)">
+    <meta name="author" content="Mike Gao">
